<resources>
    <string name="app_name">JavaBank</string>

    <string name="nav_menu">Navigation</string>
    <string name="nav_main">Main</string>
    <string name="nav_accounts">Accounts</string>
    <string name="nav_transactions">Transactions</string>
    <string name="nav_cards">Cards</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>

    <string name="header_desc">Profile picture</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="account_title">Your Accounts:</string>
    <string name="account_type">Account</string>
    <string name="account_nr">AccountNumber</string>
    <string name="account_balance">Balance</string>
    <string name="account_image">Account image</string>
    <string name="account_add_credit">Add credit limit?</string>
    <string name="account_creditLimit">Credit limit</string>
    <string name="account_show">Show account</string>

    <string name="button_accept">Accept</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

    <string name="account_delete_title">Delete account</string>
    <string name="account_update_title">Create or update account</string>
    <string name="linkCardTitle">Card:</string>

    <string name="login_title">Please login</string>
    <string name="button_login">Login</string>
    <string name="button_login_cancel">Cancel</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_createUser">Dont have an account? Create one!</string>
    <string name="welcome">Welcome to JavaBank!</string>

    <string name="register_title">Please register</string>
    <string name="button_register">Register</string>
    <string name="button_register_cancel">Cancel</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_password_again">Confirm password</string>
    <string name="return_login">Return back to login screen</string>
    <string name="passwordTips">1) Password must contain at least 12 characters
        \n2) Password must contain at least 1 number
        \n3) Password must contain at least 1 upper case letter
        \n4) Password must contain at least 1 lower case letter
        \n5) Password must contain at least 1 special character
        \n6) Password must not contain any spaces</string>

    <string name="keylist">Insert keycode</string>

    <string name="settingsTitle">Update your information</string>
    <string name="settings_name">Full name</string>
    <string name="settings_address">Address</string>
    <string name="settings_new_password">New password</string>
    <string name="settings_new_password_again">Confirm new password</string>
    <string name="settings_current_password">Current password</string>
    <string name="settingsPasswordTitle">Change your password</string>
    <string name="settings_number">Phone number</string>

    <string name="depositTitle">Deposit money</string>
    <string name="withdrawTitle">Withdraw money</string>
    <string name="transferTitle">Transfer money</string>
    <string name="amount">Amount</string>
    <string name="selectTransferType">Transfer to an external account?</string>

    <string name="history_date">Date</string>

    <string name="fileTitle">Save account history in a local file</string>
    <string name="fileName">Give a file name</string>
    <string name="printFileBtn">Save to file</string>

    <string name="linkedBankCardTitle">Linked bank card:</string>
    <string name="creditLimitTitle">Credit limit:</string>

    <string name="card_title">Your cards:</string>
    <string name="card_update_title">Create or update card</string>
    <string name="card_delete_title">Delete card</string>
    <string name="card_nr">CardNumber</string>
    <string name="card_dailyLimit">Daily limit</string>
    <string name="linkAccTitle">Linked account:</string>

    <string name="main_support">Feel free to contact our 24/7 customer support at support@javabank.com or call us 0200 020 020</string>
    <string name="main_navhelper">Please use toolbar navigation menu for switching between views</string>

</resources>
