<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:title="@string/nav_menu">

    <item android:id="@+id/nav_main"
        android:icon="@drawable/ic_main"
        android:title="@string/nav_main"/>

    <item android:id="@+id/nav_accounts"
        android:icon="@drawable/ic_account"
        android:title="@string/nav_accounts"/>

    <item android:id="@+id/nav_transfers"
        android:icon="@drawable/ic_transfer"
        android:title="@string/nav_transfers"/>

    <item android:id="@+id/nav_payments"
        android:icon="@drawable/ic_payment"
        android:title="@string/nav_payments"/>

    <item android:id="@+id/nav_cards"
        android:icon="@drawable/ic_card"
        android:title="@string/nav_cards"/>

    <item android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings"/>

    <item android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_logout"/>


    </group>

</menu>