<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/showCards"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="8dp"
        android:layout_below="@+id/card_title"
        android:gravity="center"
        android:background="@drawable/textview_border"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:id="@+id/card_update_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showCards"
        android:padding="8dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textview_border">

        <TextView
            android:id="@+id/updateCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/card_update_title"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/updateCardNr"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updateCardTitle"
            android:hint="@string/card_nr"
            android:inputType="text"
            android:autofillHints="@string/card_nr"/>

        <EditText
            android:id="@+id/updateCardLimit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updateCardNr"
            android:hint="@string/card_dailyLimit"
            android:inputType="text"
            android:autofillHints="@string/card_dailyLimit"/>

        <TextView
            android:id="@+id/linkAccTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updateCardLimit"
            android:text="@string/linkAccTitle"
            android:textSize="20sp"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/updateAccBankCard"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updateCardLimit"
            android:layout_toEndOf="@+id/linkAccTitle"
            android:layout_marginTop="3dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/updateCard_btn_accept"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/updateCardNr"
            android:layout_below="@+id/updateCardTitle"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/button_accept"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/updateCard_btn_decline"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/updateCardNr"
            android:layout_below="@+id/updateCard_btn_accept"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/button_cancel"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/acc_delete_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/card_update_container"
        android:padding="8dp"
        android:gravity="center"
        android:background="@drawable/textview_border">

        <TextView
            android:id="@+id/deleteCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/card_delete_title"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/deleteCardNr"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deleteCardTitle"
            android:hint="@string/card_nr"
            android:inputType="text"
            android:autofillHints="@string/card_nr"/>

        <Button
            android:id="@+id/deleteCard_btn_accept"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/deleteCardNr"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/button_delete"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </RelativeLayout>

</RelativeLayout>