<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorLightGrey">

            <ImageView
                android:id="@+id/cardImageView"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_card"
                android:contentDescription="@string/account_image" />

            <TextView
                android:id="@+id/CardIdView"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/card_nr"
                android:layout_toEndOf="@+id/cardImageView"
                android:layout_alignParentTop="true"
                android:gravity="center|start"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/linkedAccNrView"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_toEndOf="@+id/cardImageView"
                android:layout_below="@+id/CardIdView"
                android:text="@string/account_nr"
                android:textSize="16sp"
                android:textColor="#636363"/>


            <TextView
                android:id="@+id/cardLimitView"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical|end"
                android:text="@string/card_dailyLimit"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                android:textColor="#636363"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>