<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorLightGrey">

            <TextView
                android:id="@+id/historyDate"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/history_date"
                android:gravity="center|start"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/historyAcc"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_toEndOf="@+id/historyDate"
                android:text="@string/account_nr"
                android:textSize="16sp"
                android:textColor="#636363"/>


            <TextView
                android:id="@+id/historyAmount"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical|end"
                android:text="@string/account_balance"
                android:layout_marginEnd="10dp"
                android:textSize="16sp"
                android:textColor="#636363"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>